[Docs] style fix for light/dark mode highlights

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,20 +5,18 @@
     --md-primary-fg-color--dark:  #B92B0F;
 
     --md-accent-fg-color:                #B92B0F;
-    --md-accent-fg-color--transparent:   #B92B0F;
+    --md-accent-fg-color--transparent: var(--md-accent-fg-color); /* Default to current color */
     --md-accent-bg-color:                #ffffff;
     --md-accent-bg-color--light:         #B92B0F;
   }
 
-[data-md-color-scheme="aiforco"] {
-  --md-primary-fg-color:        #B92B0F;
-  --md-primary-fg-color--light: #F05F42;
-  --md-primary-fg-color--dark:  #B92B0F;
+[data-md-color-scheme="default"] {
+    --md-accent-fg-color--transparent: #f8d2cb; /* Transparent color for 'default' scheme */
 }
 
-/* [data-md-color-accent=indigo] {
-    --md-accent-fg-color: #B92B0F;
-} */
+[data-md-color-scheme="slate"] {
+  --md-accent-fg-color--transparent: #492821; /* Transparent color for 'default' scheme */
+}
 
 /* Ensure code blocks wrap text */
 .codehilite pre {
